force-app/main/default/objects/L_PR_External_Org_Opportunity_Relation__c/L_PR_External_Org_Opportunity_Relation__c.object-meta.xml
<CustomObject>
    <label>Organisation Opportunity Relationship</label>
    <nameField>
        <displayFormat>OOR-{000000}</displayFormat>
        <label>Organisation Opportunity Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organisation Opportunity Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>