force-app/main/default/objects/L_PR_External_Org_Opportunity_Relation__c/fields/L_PR_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PRM_Opportunity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Organisation Opportunity Relationships</relationshipLabel>
    <relationshipName>External_Org_Opportunity_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>