force-app/main/default/objects/L_PR_External_Org_Opportunity_Relation__c/fields/L_PR_OpportunityStage__c.field-meta.xml
<CustomField>
    <fullName>L_PR_OpportunityStage__c</fullName>
    <label>Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>