force-app/main/default/objects/L_PR_External_Org_Opportunity_Relation__c/fields/L_PR_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Organisation_Name__c</fullName>
    <label>Organisation Name</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>I_ST_Educational_Institution</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>I_RS_External_Organisation</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>I_RS_La_Trobe_Organisation_Unit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organisation Opportunity Relationships</relationshipLabel>
    <relationshipName>External_Org_Opportunity_Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>