force-app/main/default/objects/L_PR_External_Org_Opportunity_Relation__c/fields/L_PR_Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Organisation_Type__c</fullName>
    <formula>L_PR_Organisation_Name__r.RecordType.Name</formula>
    <label>Organisation Type</label>
    <type>Text</type>
</CustomField>