force-app/main/default/objects/L_PR_External_Org_Opportunity_Relation__c/listViews/External_Org_Opportunity_Relationship.listView-meta.xml
<ListView>
    <fullName>External_Org_Opportunity_Relationship</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>L_PR_Organisation_Name__c</columns>
    <columns>L_PR_IsPrimary__c</columns>
    <columns>L_PR_Organisation_Type__c</columns>
    <columns>L_PR_Opportunity_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>L_PR_Organisation_Type__c</field>
        <operation>equals</operation>
        <value>External Organisation</value>
    </filters>
    <filters>
        <field>L_PR_Organisation_Type__c</field>
        <operation>equals</operation>
        <value>Educational Institution</value>
    </filters>
    <label>External Org Opportunity Relationship</label>
</ListView>