force-app/main/default/objects/L_PR_External_Org_Opportunity_Relation__c/listViews/Internal_Org_Opportunity_Relationship.listView-meta.xml
<ListView>
    <fullName>Internal_Org_Opportunity_Relationship</fullName>
    <columns>L_PR_Organisation_Name__c</columns>
    <columns>L_PR_IsPrimary__c</columns>
    <columns>L_PR_Organisation_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>L_PR_Organisation_Type__c</field>
        <operation>equals</operation>
        <value>La Trobe Organisation Unit</value>
    </filters>
    <label>Internal Org Opportunity Relationship</label>
</ListView>